letting spacing fix

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,7 @@ h1 {
 
 .hed {
   margin: 0 0;
-  letter-spacing: 5px;
+  letter-spacing: 1px;
 }
 
 .container {
